# riscv-function-profiling

./: .gitignore  MANIFEST.in  README.md  makefile  pyproject.toml  requirements.txt
cv32e40x/: config.wal  main.elf  waves.fst
src/: CallStack.py  colors.py  riscv-profile.py
src/rv_profile/: cli.py  colors.py  rv_profile.py
